# custom_fs_using_sgx

./: .gitignore  Makefile
app/: .gitignore  Cargo.toml  build.rs
app/src/: change_password.rs  lib.rs  main.rs  mkfs.rs  mount.rs  tde_cursor.rs
app/src/cli_interface/: cli_struct.rs  mod.rs
app/src/fs/: block_group.rs  directory.rs  filekind.rs  fs_api_impl.rs  fs_layout.rs  inode.rs  mod.rs  superblock.rs  xattr.rs
app/src/sgx_components/: encryption.rs  kek_management.rs  key_management.rs  mod.rs  test_third_party_crates_in_sgx.rs
app/src/utils/: digest.rs  fs_size_calculator.rs  init_test_environment.rs  mod.rs  time_util.rs  traits.rs
enclave/: Cargo.toml  config.xml  enclave.edl  encyption_using_sgx.edl  key_management_using_sgx.edl
enclave/src/: encryption.rs  lib.rs
enclave/src/key_management/: c_abi.rs  c_api.rs  key_manager.rs  mod.rs  rust_abi.rs  rust_api.rs  test_third_party_crates.rs  wrap_key.rs
enclave/src/key_management/kek_manager/: c_api.rs  kek_manager.rs  mod.rs  rust_api.rs
