[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"
authors = ["xin201501"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.140"
log = "0.4.17"
users = "0.11.0"
serde = { version = "1.0.154", features = ["derive"]}
smallvec = "1.10.0"
fuser = { version = "0.12.0", features = ["serializable"] }
anyhow = "1.0.69"
bincode = {version = "2.0.0-rc.2",features = ["serde"]}
memmap2 = "0.5.10"
blake3 = "1.3.3"
byte-unit = "4.0.18"
bitvec = "1.0.1"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
# new added
aes = { version = "0.7.5", features = ["force-soft"]}
xts-mode = { version = "0.4.1" ,default-features = false}
sgx_types = {path = "../../../sgx_types"}
sgx_urts = {path = "../../../sgx_urts"}
once_cell = "1.17.1"
rpassword = "7.2.0"
